lks-eks-simple/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc
  namespace: default
  labels:
    app: hello-app
spec:
  type: ClusterIP
  selector:
    app: hello-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
